@@ -11,7 +11,6 @@
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>34</integer>
-		<integer>43</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>9C31</string>
